--- a/gui/src/engines/raw/Raw.ui
+++ b/gui/src/engines/raw/Raw.ui
@@ -706,7 +706,7 @@
                 <property name="geometry">
                  <rect>
                   <x>0</x>
-                  <y>-178</y>
+                  <y>0</y>
                   <width>169</width>
                   <height>571</height>
                  </rect>
@@ -925,7 +925,7 @@
                   <x>0</x>
                   <y>0</y>
                   <width>169</width>
-                  <height>1001</height>
+                  <height>1024</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -933,6 +933,13 @@
                   <widget class="QRadioButton" name="moduleBuiltWith">
                    <property name="text">
                     <string>Builtwith</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="moduleCensys">
+                   <property name="text">
+                    <string>Censys</string>
                    </property>
                   </widget>
                  </item>
