minor improvements on osint engine

--- a/gui/src/tools/ASNTool.ui
+++ b/gui/src/tools/ASNTool.ui
@@ -29,6 +29,11 @@
          <string>All</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Country</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
