--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -69,6 +69,11 @@
          <string>SSL Cert</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Cidr</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
@@ -127,6 +132,11 @@
        <item>
         <property name="text">
          <string> SSL Certs</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Cidr</string>
         </property>
        </item>
       </widget>
